--- a/css/final.css
+++ b/css/final.css
@@ -259,7 +259,7 @@ header {
     margin-bottom: 50px;
 }
 
-.cardscadastrovendedor .informacao_cadastrovendedor {
+.cardscadastrovendedor .informacao {
     display: flex;
     flex-direction: column;
     border: solid 1px #707070;
@@ -271,7 +271,7 @@ header {
     background-color: white;
 }
 
-.cardscadastrovendedor .cadvend_cadastrovendedor {
+.cardscadastrovendedor .cadvend {
     display: flex;
     flex-direction: column;
     width: 190px;
@@ -290,7 +290,7 @@ header {
     padding: 9px;
 }
 
-.cardscadastrovendedor .cadvend_cadastrovendedor form input {
+.cardscadastrovendedor .cadvend form input {
     width: 160px;
     padding: 5px;
 }
@@ -2080,5 +2080,10 @@ main {
     .duvidas_perguntasfrequentes input {
         width: 100%;
         height: 10vh;
+        
+    }
+    .duvidas_perguntasfrequentes h2 {
+        padding-top: -20px;
+        
     }
 }
