Pagina Quem Somos alterada

--- a/css/final.css
+++ b/css/final.css
@@ -1577,68 +1577,61 @@ main {
 }
 
 /* pagina quem somos */
-
-.quemsomos_pag {
-    padding-bottom: 1px;
+.imagem_quemsomos{
+    background-image: linear-gradient(rgba(35, 35, 35, 0.5),rgba(35,35,35,0.5)), url(../img/armario_2.jpg);
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-.quemsomos_pag .bannerquemsomos {
-    background-image: url(../img/banner.png);
-    width: 100%;
-    /*Importante colocar 100% para ele agir sozinho*/
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
+.quemsomos_pag{
+    padding-bottom: 30px;
 }
-
-.quemsomos_pag .caixao {
+.quemsomos_texto_one{
+    justify-content: center;
+    color: white;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: justify;
-    justify-content: flex-start;
-    padding-left: 4%;
-    width: 50%;
+}
+.quemsomos_texto_one p{
+    font-size: 20px;
+    margin-top: 25px;
+    width: 800px;    
+}
+.quemsomos_texto_one h1{
+    font-size: 30px;
 }
 
-.quemsomos_pag h2 {
-    padding: 25px 0px;
+.quemsomos_partetwo{
+    background-color: white;
+    width: 900px;
+    margin: auto;
+    margin-bottom: 30px;
 }
-
-.quemsomos_pag .one, .quemsomos_pag .two {
+.quemsomos_texto_two{
+    border-radius: 10px;
+    box-shadow: 10px 5px 19px 0px rgba(0,0,0,0.29);
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    height: 450px;
+    
+}
+.quemsomos_texto_two .quemsomos_esquerdo{
+    text-align: justify;
+    padding: 10px 10px;
+    width: 350px;
+    padding-right: 40px;
+}
+.quemsomos_esquerdo{
     color: #707070;
 }
 
-.quemsomos_pag .one {
-    width: 80%;
-    font-size: 1em;
-}
-
-.quemsomos_pag .two {
-    width: 80%;
-    font-size: 1em;
-    margin-bottom: 10%;
-}
-
-.quemsomos_pag .tudo {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin: auto;
-    background-color: white;
-    margin: 40px auto;
-    border-radius: 5px;
-    box-shadow: 4px 4px 15px #cccccc;
-}
-
-.quemsomos_pag .contImagem {
-    width: 45%;
-    height: auto;
-    margin: 25px 0px;
-    padding-right: 2%;
-}
-
-.quemsomos_pag .contImagem img {
-    width: 100%;
+.quemsomos_direito img{
+    width: 380px;
+    height: 400px;
 }
 
 @media (min-width: 1170px) {
@@ -2261,23 +2254,6 @@ main {
     /* pagina FAQ */
     .faq_pag .enviar_perguntasfrequentes {
         width: auto;
-    }
-    /* pagina Quem Somos */
-    .quemsomos_pag .tudo {
-        display: block;
-        justify-content: center;
-        align-items: center;
-    }
-    .quemsomos_pag .tudo img {
-        width: 75%;
-    }
-    .quemsomos_pag .caixao {
-        width: 100%;
-    }
-    .quemsomos_pag .contImagem {
-        width: 100%;
-        display: flex;
-        justify-content: center;
     }
     /* pagina ONGS */
     .ongs_pag .conteudo {
