--- a/css/final.css
+++ b/css/final.css
@@ -645,6 +645,10 @@ header {
 
 /* Home */
 
+.home_pag {
+    padding-bottom: 1px;
+}
+
 .home_pag .cnjt {
     display: flex;
     justify-content: space-between;
@@ -887,7 +891,7 @@ header {
     box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     background-color: white;
-    margin: 2% auto;
+    margin: 4% auto;
     padding: 2% 0;
 }
 
@@ -911,14 +915,19 @@ header {
     /* transition: all 2s; */
 }
 
-.home_pag .cardhome2 {
-    margin: 20px 0px 0px;
+.home_pag .pdts2 {
     box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    background-color: white;
+    padding: 2% 0;
+    margin: 4% auto;
+}
+
+.home_pag .cardhome2 {
+    margin: 20px 0px 0px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    background-color: white;
 }
 
 .home_pag .card p {
@@ -935,10 +944,6 @@ header {
     font-size: 15px;
     color: black;
     text-decoration: none;
-}
-
-.home_pag .pdt {
-    padding-bottom: 60px;
 }
 
 .home_pag .pdt h4 {
