--- a/css/final.css
+++ b/css/final.css
@@ -1885,12 +1885,12 @@ main {
 
 /* pagina login */
 
-.cadastroelogin_pag .cards_cadlog {
+.login_pag .cards_cadlog {
     display: flex;
     justify-content: space-between;
 }
 
-.cadastroelogin_pag .cards_cadlog .imgLoginCad {
+.login_pag .cards_cadlog .imgLoginCad {
     background-image: linear-gradient(rgba(183, 39, 255, 0.5), rgba(183, 39, 255, 0.5)), url(../img/img4.png);
     background-size: cover;
     background-position: center;
@@ -1899,11 +1899,11 @@ main {
     height: 100vh;
 }
 
-.cadastroelogin_pag .contCard_1_cadlog {
+.login_pag .contCard_1_cadlog {
     width: 50%;
 }
 
-.cadastroelogin_pag .card_1_cadlog {
+.login_pag .card_1_cadlog {
     width: 80%;
     height: 80%;
     margin: 12% auto;
@@ -1916,39 +1916,47 @@ main {
     justify-content: center; 
 }
 
-.cadastroelogin_pag .card_1_cadlog #loginForm {
+.login_pag .card_1_cadlog #loginForm {
     width: 50%;
     height: 60%;
 }
 
-.cadastroelogin_pag .card_1_cadlog #loginForm input {
+.login_pag .card_1_cadlog #loginForm input {
     width: 100%;
     height: 37px;
     border-radius: 5px;
     border: solid 1px #cccccc;
 }
 
-.cadastroelogin_pag .card_1_cadlog #loginForm label {
+.login_pag .card_1_cadlog #loginForm label {
     width: 100%;
     margin-bottom: 3%; 
 }
 
-.cadastroelogin_pag .card_1_cadlog .login_cadlog {
+.login_pag .card_1_cadlog .login_cadlog {
     display: flex;
     flex-direction: column;
     margin: 5% 0;
 
 }
 
-.cadastroelogin_pag .card_1_cadlog .btn_cadlog {
+.login_pag .card_1_cadlog buttons {
+    text-align: center;
+    padding: 10px 20px;
+    background-color: var(--roxo);
+    border-radius: 4px;
+    border: solid 1px var(--roxo);
+    color: white;
+    width: 100%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+}
+
+.login_pag .card_1_cadlog .btn_cadastrarse {
     text-align: center;
 }
 
-.cadastroelogin_pag .card_1_cadlog .btn_cadastrarse {
-    text-align: center;
-}
-
-.cadastroelogin_pag .card_1_cadlog .btn_cadastrarse a {
+.login_pag .card_1_cadlog .btn_cadastrarse a {
     color: var(--roxo);
 }
 
@@ -2050,6 +2058,7 @@ main {
         width: 100%;
         padding-top: 0;
     }
+}    
     /* pagina Produto */
     .paginaProduto_pag .direito .nomeProduto {
         font-size: 1.5em;
