--- a/css/final.css
+++ b/css/final.css
@@ -242,6 +242,12 @@ header {
 
 /* Cadastro de vendedor */
 
+.btn_cadastrovendedor{
+    padding-top: 20px;
+    width: 130px;
+    margin: auto;
+}
+
 .cardscadastrovendedor h3 {
     padding-top: 20px;
     color: var(--roxo);
@@ -250,8 +256,16 @@ header {
     text-align: center;
 }
 
-.cardscadastrovendedor label, input {
+.cardscadastrovendedor  input {
     color: #707070;
+    border-radius: 4px;
+    border: solid 1px var(--cinza);
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    margin: 5px 0px;
+    padding: 4px;
+    justify-content: center;
 }
 
 .cardscadastrovendedor {
@@ -259,8 +273,7 @@ header {
     margin: auto;
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    padding: 40px 0px;
 }
 
 .cardscadastrovendedor .informacao_cadastrovendedor {
@@ -283,9 +296,7 @@ header {
     border-radius: 8px;
     padding: 0px 30px;
     padding-bottom: 50px;
-    justify-content: center;
     background-color: white;
-    align-items: center;
 }
 
 .cardscadastrovendedor .cadastro2 {
@@ -314,6 +325,8 @@ header {
     padding-bottom: 10px;
 }
 
+
+
 /* Responsivo ranking */
 
 @media(max-width: 1169px) {
@@ -341,9 +354,6 @@ header {
         width: 200px;
         margin: auto;
         padding-top: 20px;
-    }
-    .cardscadastrovendedor{
-        width: 50%;
     }
 }
 
@@ -394,7 +404,8 @@ header {
         width: 300px;
     }
     .cardscadastrovendedor {
-        width: 1000px;
+        padding: 40px 0px;
+        width: 100%;
         margin: auto;
     }
     .cardscadastrovendedor form {
