--- a/css/final.css
+++ b/css/final.css
@@ -396,6 +396,9 @@ header {
     }
     .cardscadastrovendedor .cadvend_cadastrovendedor {
         width: 290px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .cardscadastrovendedor {
         width: 800px;
@@ -418,6 +421,12 @@ header {
     .cardscadastrovendedor button {
         margin-top: 30px
     }
+    .cardscadastrovendedor input{
+        width: 200px;
+    }
+    .btn_cadastrovendedor{
+        width: 150px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -439,6 +448,7 @@ header {
     .cardscadastrovendedor .informacao_cadastrovendedor {
         width: 300px;
         margin-bottom: 10px;
+        height: 185px;
     }
     .cardscadastrovendedor .cadastro2_cadastrovendedor {
         width: 200px;
@@ -446,6 +456,7 @@ header {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        line-height: 2.3em;
     }
     .cardscadastrovendedor form {
         margin: auto;
